Apply yet another patch